--- a/src/app/component/cPanel/chart-account/chart-account.component.html
+++ b/src/app/component/cPanel/chart-account/chart-account.component.html
@@ -6,8 +6,9 @@
    <div class="col">
     <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 mb-5 my-md-0 mw-100 navbar-search">
         <div class="input-group">
-            <input type="text" class="form-control bg-light border-0 small" placeholder="Filter By Email......"
-                aria-label="Search" aria-describedby="basic-addon2">
+            <input type="text" class="form-control bg-light border-0 small" placeholder="Filter By Email..."
+                   aria-label="Search" aria-describedby="basic-addon2" 
+                   (input)="filterAccounts($event)">
             <div class="input-group-append">
                 <button class="btn btn-primary" type="button" style="background-color: #192440; border-color: #00FFAD; border-width: 2px;">
                     <i class="fas fa-search fa-sm"></i>
@@ -17,7 +18,8 @@
     </form>
    </div>
    <div class="col text-right">
-    <button class="btn pl-4 pr-4" type="button" style="background-color: #192440; border-color: #00FFAD; border-width: 2px; color: white;">NEW</button>
+    <button class="btn pl-4 pr-4" id="green_btn" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class=" btn my-4 font-weight-bold atlas-cta" data-bs-toggle="modal" data-bs-target="#exampleModal"
+    type="button" style="background-color: #192440; border-color: #00FFAD; border-width: 2px; color: white;">NEW</button>
    </div>
    </div>
     <table class="table">
@@ -32,47 +34,77 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>1000</td>
-            <td>CASH</td>
-            <td>Asset</td>
-            <td>Current Asset</td>
-            <td>56</td>
-            <td><div><i class="fa fa-eye" style="font-size:24px"></i></div></td>
-          </tr>
-          <tr>
-            <td>2000</td>
-            <td>Account Payable</td>
-            <td>Liability</td>
-            <td>Current Liability</td>
-            <td>85</td>
-            <td><div><i class="fa fa-eye" style="font-size:24px"></i></div></td>
-          </tr>
-          <tr>
-            <td>3000</td>
-            <td>Retained Earning</td>
-            <td>Owner Equity</td>
-            <td>Retained Earnings</td>
-            <td>45</td>
-            <td><div><i class="fa fa-eye" style="font-size:24px"></i></div></td>
-          </tr>
-          <tr>
-            <td>4000</td>
-            <td>Rent Revenue</td>
-            <td>Incom</td>
-            <td>Revenue</td>
-            <td>57</td>
-            <td><div><i class="fa fa-eye" style="font-size:24px"></i></div></td>
-          </tr>
-          <tr>
-            <td>5000</td>
-            <td>Stationary</td>
-            <td>Expenses</td>
-            <td>General Expenses</td>
-            <td>29</td>
-            <td><div><i class="fa fa-eye" style="font-size:24px"></i></div></td>
-          </tr>
+            <tr *ngFor="let account of filteredAccounts">
+                <td>{{ account.accCode }}</td>
+                <td>{{ account.accountName }}</td>
+                <td>{{ account.accountType }}</td>
+                <td>{{ account.subAccount }}</td>
+                <td>{{ account.balance }}</td>
+                <td>
+                    <div><i class="fa fa-eye" style="font-size:24px"></i></div>
+                </td>
+            </tr>
         </tbody>
       </table>
     
 </div>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" #myModal>
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel" style="font-weight: bold;">Add New Account</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+       
+        <div class="modal-body">
+            <form id="myform" >
+                <div class="row">
+                    <div class="form-group col-md-6">
+                        <label for="fullName" id="title" data-i18n="name" name="fullName"  style="color: black; font-weight: bold; ">TitleAR</label>
+                        <input type="text" minlength="3" class="form-control" id="name" name="fullName" #fullName="ngModel" ngModel required style="background-color: white; color: black; border-color: black;">
+                        <div *ngIf="fullName.touched && fullName.invalid" class="text-danger">
+                            <div *ngIf="fullName.errors?.['required']">Title in Arabic is required</div>
+                            <div *ngIf="fullName.errors?.['minLength']">Title must be at least 3 characters</div>
+                          </div>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="fullName" id="title" data-i18n="name" name="fullName"  style="color: black; font-weight: bold; ">TitleEn</label>
+                        <input type="text" minlength="3" class="form-control" id="name" name="fullName" #fullName="ngModel" ngModel required style="background-color: white; color: black; border-color: black;">
+                        <div *ngIf="fullName.touched && fullName.invalid" class="text-danger">
+                            <div *ngIf="fullName.errors?.['required']">Title in English is required</div>
+                            <div *ngIf="fullName.errors?.['minLength']">Title must be at least 3 characters</div>
+                          </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-group col-md-6">
+                        <label for="fullName" id="title" data-i18n="name" name="fullName"  style="color: black; font-weight: bold; ">Account Code</label>
+                        <input type="text" minlength="3" class="form-control" id="name" name="fullName" #fullName="ngModel" ngModel required style="background-color: white; color: black; border-color: black;">
+                        <div *ngIf="fullName.touched && fullName.invalid" class="text-danger">
+                            <div *ngIf="fullName.errors?.['required']">Accoune Code is required</div>
+                            <div *ngIf="fullName.errors?.['minLength']">Account Code must be at least 3 characters</div>
+                          </div>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="fullName" id="title" data-i18n="name" name="fullName"  style="color: black; font-weight: bold; ">Parent Account ID</label>
+                        <input type="text" minlength="3" class="form-control" id="name" name="fullName" #fullName="ngModel" ngModel required style="background-color: white; color: black; border-color: black;">
+                        <div *ngIf="fullName.touched && fullName.invalid" class="text-danger">
+                            <div *ngIf="fullName.errors?.['required']">Parent Account is required</div>
+                            <div *ngIf="fullName.errors?.['minLength']">Parent Account must be at least 3 characters</div>
+                          </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="message" id="title" data-i18n="message" name="description" style="color: black; font-weight: bold;">Account Description</label>
+                    <textarea class="form-control" #description="ngModel" id="message" ngModel name="description" style="background-color: white; color: black; border-color: black;"></textarea>
+                    <div *ngIf="description.touched && description.invalid" class="text-danger">
+                        <div *ngIf="description.errors?.['required']">description is required</div>
+                    </div>
+                </div>
+                <button  type="submit" class="btn font-weight-bold atlas-cta atlas-cta-wide my-3" id="green_btn"  style="font-weight: bold;">Add Account</button>
+            </form>
+        </div>
+      </div>
+    </div>
+  </div>
