create the contact component

--- a/src/app/component/cPanel/side-bar/side-bar.component.html
+++ b/src/app/component/cPanel/side-bar/side-bar.component.html
@@ -108,7 +108,7 @@
                         <a class="collapse-item" href="#">Payment Method</a>
                         <a class="collapse-item" href="#">Product & Services</a>
                         <a class="collapse-item" href="#">Tax</a>
-                        <a class="collapse-item" href="#">Contact</a>
+                        <a class="collapse-item" [routerLink]="[{ outlets: { sidebar: ['contact'] } }]">Contact</a>
                     </div>
                 </div>
             </li>
